--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -7,13 +7,15 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: default-dev
   project: dev
   source:
     path: apps/
     repoURL: https://github.com/legmac/argo.git  #https://github.com/arthurk/argocd-example-install.git
     targetRevision: HEAD
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
