--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -6,7 +6,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    server: https://kubernetes.default.svc
+    server: 'https://kubernetes.default.svc'
     namespace: default
   project: dev
   source:
