--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -2,13 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: root
+  namespace: default
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
+  project: dev
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
-  project: dev
   source:
     path: apps/
     repoURL: https://github.com/legmac/argo.git
