--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: dev
+  project: default
   source:
     repoURL: 'https://github.com/legmac/argo'
     path: apps
