--- a/apps/spring/app.yaml
+++ b/apps/spring/app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: spring-boot-admin
   namespace: monitoring
 spec:  
-  project: default
+  project: dev
   source:
     repoURL: 'https://evryfs.github.io/helm-charts/'
     targetRevision: 0.0.11
