--- a/apps/templates/spring-dev.yaml
+++ b/apps/templates/spring-dev.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: 0.0.11
     helm:
       valueFiles:
-        - values.yaml
+        - spring-dev-values.yaml
       releaseName: spring-boot-admin
       version: v3
     chart: spring-boot-admin
