--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -17,4 +17,6 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
-  syncPolicy: {}
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
