--- a/apps/templates/spring-dev.yaml
+++ b/apps/templates/spring-dev.yaml
@@ -4,15 +4,11 @@ metadata:
   name: spring-boot-admin
   namespace: default
 spec:  
-  project: dev
+  project: default
   source:
     repoURL: 'https://evryfs.github.io/helm-charts/'
     targetRevision: 0.0.11
     helm:
-      valueFiles:
-        - spring-dev-values.yaml
-      releaseName: spring-boot-admin
-      version: v3
     chart: spring-boot-admin
   destination:
     server: 'https://kubernetes.default.svc'
