--- a/apps/templates/spring-dev.yaml
+++ b/apps/templates/spring-dev.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: spring-boot-admin
-  namespace: monitoring
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:  
